# artem-cv-roadmap

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 00_study_argparse.ipynb  00_study_pathlib.ipynb
notebooks/stage_0/: 00_study_argparse.ipynb  00_study_logging.ipynb  00_study_pathlib.ipynb
notebooks/stage_1/: 01_study_pillow.ipynb
src/cv_lab/: __init__.py  config.py
